[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/Light.png" type="Texture" id=1]
[ext_resource path="res://GUI/Infotext.tres" type="DynamicFont" id=2]
[ext_resource path="res://GUI/Small Label.tscn" type="PackedScene" id=3]
[ext_resource path="res://GUI/levelbutton3.png" type="Texture" id=4]
[ext_resource path="res://GUI/LevelButton.gd" type="Script" id=5]
[ext_resource path="res://GUI/skinbutton1.png" type="Texture" id=6]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[node name="1" type="TextureButton"]
margin_right = 30.0
margin_bottom = 30.0
focus_neighbour_bottom = NodePath("../Customize")
texture_normal = ExtResource( 6 )
texture_disabled = ExtResource( 4 )
stretch_mode = 3
script = ExtResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="Highlight" type="TextureRect" parent="."]
modulate = Color( 1, 0, 0, 1 )
material = SubResource( 1 )
margin_left = 4.0
margin_top = 4.0
margin_right = 48.0
margin_bottom = 374.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.5, 0.06 )
rect_clip_content = true
texture = ExtResource( 1 )
expand = true
stretch_mode = 4

[node name="Label" parent="." instance=ExtResource( 3 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Complete" type="ColorRect" parent="."]
visible = false
margin_left = 2.0
margin_top = 30.0
margin_right = 14.0
margin_bottom = 32.0
color = Color( 0, 0.882353, 0.156863, 1 )

[node name="Par" type="ColorRect" parent="."]
visible = false
margin_left = 16.0
margin_top = 30.0
margin_right = 28.0
margin_bottom = 32.0
color = Color( 1, 0.890196, 0, 1 )

[node name="Panel" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -34.0
margin_top = -62.0
margin_right = 35.0
margin_bottom = -30.0
size_flags_horizontal = 8
size_flags_vertical = 8
color = Color( 0.0470588, 0.0470588, 0.0470588, 1 )

[node name="Text" type="Label" parent="Panel"]
margin_left = 1.0
margin_top = 3.0
margin_right = 68.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 2 )
text = "placeholder text, lol if you see this"
align = 1
valign = 2
autowrap = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
